--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,55 @@
-Babel>=1.3
-Flask>=1.0.0.0
-Flask-Babel>=0.9
-flask-caching>=1.7.2
-Flask-Login>=0.2.10
-Flask-Mail>=0.9.0
-Flask-OpenID>=1.2.1
-Flask-SQLAlchemy>=1.0
-Flask-Script>=0.6.7
-Flask-Testing>=0.4.1
-Flask-WTF>=0.9.4
-Jinja2>=2.7.2
-Mako>=0.9.1
-MarkupSafe>=0.19
-Pygments>=1.6
-SQLAlchemy>=0.9.3
-Sphinx>=1.2.2,<2
-WTForms>=1.0.5
-Werkzeug>=0.9.4
-alarmdecoder>=1.13.4
-alembic>=0.6.4
+Babel==2.6.0
+Flask==1.0.2
+Flask-Babel==0.11.2
+Flask-Caching==1.7.2
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-OpenID==1.2.5
+Flask-SQLAlchemy==2.1
+Flask-Script==2.0.6
+Flask-Testing==0.7.1
+Flask-WTF==0.14.2
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.1.0
+Pygments==2.3.1
+SQLAlchemy==1.2.18
+Sphinx==1.8.4
+WTForms==2.2.1
+Werkzeug==0.14.1
+alarmdecoder==1.13.4
+alembic==1.0.0.dev0
 argparse>=1.2.1
-async>=0.6.1
-blinker>=1.3
-cffi>=0.8.2
-cryptography>=0.4
+async==0.6.2
+blinker==1.4
+cffi==1.12.2
+cryptography==2.6.1
 distribute>=0.6.24
-docutils>=0.11
+docutils==0.14
 gevent==1.1b4
-gevent-socketio>=0.3.6
-gevent-websocket>=0.9.3
-gitdb>=0.5.4
-greenlet>=0.4.2
-itsdangerous>=0.23
-jsonpickle>=0.7.0
-mock>=1.0.1
-nose>=1.3.1
-psutil>=2.0.0
-pyOpenSSL>=0.14
-pycparser>=2.10
-python-openid>=2.2.5
-pytz>=2014.1
-sh>=1.09
-six>=1.6.1
-sleekxmpp>=1.2.4
-smmap>=0.8.2
-speaklater>=1.3
+gevent-socketio==0.3.6
+gevent-websocket==0.9.3
+gitdb==0.6.4
+greenlet==0.4.15
+itsdangerous==0.24
+jsonpickle==0.9.5
+mock==2.0.0
+nose==1.3.7
+psutil==5.5.1
+pyOpenSSL==19.0.0
+pycparser==2.19
+python-openid==2.2.5
+pytz==2019.1
+sh==1.12.14
+six==1.12.0
+sleekxmpp==1.3.3
+smmap==0.9.0
+speaklater==1.4
 wsgiref>=0.1.2
-netifaces>=0.10.4
+netifaces==0.10.4
 futures; python_version=="2.7"
-numpy>=1.9.2
-chump>=1.5.1
-twilio>=6.8.2
-gntp>=1.0.2
-miniupnpc>=1.9
+numpy==1.16.2
+chump==1.6.0
+twilio==6.8.2
+gntp==1.0.3
+miniupnpc==2.0.2
