--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ Sphinx==1.8.4
 WTForms==2.2.1
 Werkzeug==0.14.1
 alarmdecoder==1.13.4
-alembic==1.0.0.dev0
+alembic==1.0.1
 argparse>=1.2.1
 async==0.6.2
 blinker==1.4
