--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ sh==1.12.14
 six==1.12.0
 sleekxmpp==1.3.3
 smmap==0.9.0
-speaklater==1.4
+speaklater>=1.3
 wsgiref>=0.1.2
 netifaces==0.10.4
 futures; python_version=="2.7"
