--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ cffi==1.12.2
 cryptography==2.6.1
 distribute>=0.6.24
 docutils==0.14
+email-validator==1.0.3
 gevent==1.1b4
 gevent-socketio==0.3.6
 gevent-websocket==0.9.3
